# musign-cli

./: .gitignore  CLA.md  Cargo.toml  README.md  build-for-tails.Dockerfile  construct1.json  construct2.json  construct3.json  construct3_false.json  multisig.json  multisig_object.json  multisig_object2.json  object.json  setup1.json
.github/workflows/: Build.yml  Release.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc
doc/: INSTALL.md  MANUAL.md  packaging.md
src/: errors.rs  main.rs
tests/: cli.rs
