[package]
name = "musign-cli"
version = "0.1.0"
authors = ["gorazdko <gorazdko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "musign"
path="src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
secp256k1 = {version = "0.20.1", features = ["bitcoin_hashes", "rand-std" ]}
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0", features = ["preserve_order"]}
serde_cbor = "0.11.1"
bitcoin = {version="0.26.0", features = ["secp-recovery", "base64"]}

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
