[package]
name = "musign-cli"
version = "0.1.0"
authors = ["gorazdko <gorazdko@gmail.com>", "Christopher Allen <ChristopherA@LifeWithAlacrity.com>"]
edition = "2018"
license = "BSD-2-Clause-Patent"
readme = "README.md"
description = "A CLI tool for signing and verifying messages with `ECDSA` and `Schnorr` using [libsecp256k1](https://github.com/rust-bitcoin/rust-secp256k1)."
homepage = "https://github.com/BlockchainCommons/sweeptool-cli"
repository = "git@github.com:BlockchainCommons/musign-cli.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "musign"
path="src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
secp256k1 = {version = "0.20.1", features = ["bitcoin_hashes", "rand-std" ]}
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0", features = ["preserve_order"]}
serde_cbor = "0.11.1"
bitcoin = {version="0.26.0", features = ["secp-recovery", "base64"]}

[dev-dependencies]
assert_cmd = "0.10"
cargo-deb = "1.42.2"
predicates = "1"
tempfile = "3"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
section = "utility"
assets = [
    ["target/release/musign", "/usr/bin/musign", "755"],
    ["doc/MANUAL.md", "usr/share/doc/musign-cli/MANUAL.md", "644"],
]
